--- a/server/package.json
+++ b/server/package.json
@@ -8,19 +8,26 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["pdf", "analysis", "openai", "nodejs", "express"],
+  "keywords": [
+    "pdf",
+    "analysis",
+    "openai",
+    "nodejs",
+    "express"
+  ],
   "author": "PDF Analyzer Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1",
-    "openai": "^4.20.1",
     "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "morgan": "^1.10.0"
+    "helmet": "^7.1.0",
+    "mongoose": "^8.16.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.20.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -28,4 +35,4 @@
   "engines": {
     "node": ">=16.0.0"
   }
-} 
+}
