--- a/server/env.example
+++ b/server/env.example
@@ -10,3 +10,4 @@ CORS_ORIGIN=http://localhost:3000
 
 # Limites de fichiers
 MAX_FILE_SIZE=10485760 
+MONGODB_URI=mongodb://localhost:27017/apocalipssi
