--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
+
+node_modules
 client/node_modules
 server/node_modules
 
 client/.env
 server/.env
+
+# Root and subproject lock files
+package-lock.json
+client/package-lock.json
+server/package-lock.json
 
 
