--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,12 @@ jobs:
           node-version: '18'
 
       - name: Installer les dépendances
-        run: npm install
+        run: cd server && npm install
 
       - name: Démarrer MongoDB
         uses: supercharge/mongodb-github-action@1.8.0
         with:
           mongodb-version: '6.0'
-          
+
       - name: Lancer les tests
-        run: npm test
+        run: cd server && npm test
