--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI Node.js
 
 on:
   push:
-    branches: [ kevin ]
+    branches: [ main ]
   pull_request:
-    branches: [ kevin ]
+    branches: [ main ]
 
 jobs:
   build-and-test:
