--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: apocalipssi-frontend
     ports:
-      - "3000:80" # 3000 en local redirige vers le port 80 de Nginx dans le container
+      - "3000:80"
     networks:
       - appnet
     depends_on:
@@ -25,6 +25,7 @@ services:
       - ./server/.env
     depends_on:
       - mongodb
+      - ollama
     networks:
       - appnet
     restart: unless-stopped
@@ -40,8 +41,26 @@ services:
       - appnet
     restart: unless-stopped
 
+  ollama:
+    image: ollama/ollama
+    container_name: mistral-local
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+    networks:
+      - appnet
+    restart: unless-stopped
+    tty: true
+    command: >
+      bash -c "
+        ollama pull mistral &&
+        ollama run mistral
+      "
+
 volumes:
   mongodb_data:
+  ollama_data:
 
 networks:
   appnet:
