--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,15 @@
   "description": "Backend pour l'analyse de documents PDF",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest --runInBand"
-  },
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "start:backend": " npm run dev",
+  "start:frontend": "cd.. && cd client && npm start",
+  "start:ollama": "start cmd /k \"ollama run mistral\"",
+  "start:all": "concurrently \"npm run start:ollama\" \"npm run start:backend\" \"npm run start:frontend\"",
+  "test": "jest --runInBand"
+}
+,
   "keywords": [
     "pdf",
     "analysis",
@@ -18,6 +23,7 @@
   "author": "PDF Analyzer Team",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -32,6 +38,7 @@
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
+    "concurrently": "^9.2.0",
     "jest": "^30.0.3",
     "nodemon": "^3.0.2",
     "supertest": "^7.1.1"
